--- a/Narices_Frias/Page.Master
+++ b/Narices_Frias/Page.Master
@@ -7,12 +7,41 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+    
+
+
     <form id="form1" runat="server">
         <div>
+            
+            <header>
+                 <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xl-7">
+                            <img src="" alt="">
+                        </div>
+                        <div class="col-xl-5">
+                            <nav>
+                                <ul>
+                                    <li><a href="#">Catalogo</a></li>
+                                    <li><a href="#">Que Somos?</a></li>
+                                    <li><a href="#">Contactanos</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                 
+
+            </header>
+            
+
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
+
+            <h1>FOOTER</h1>
         </div>
     </form>
 </body>
