--- a/Narices_Frias/Page.Master
+++ b/Narices_Frias/Page.Master
@@ -7,6 +7,8 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <link rel="stylesheet" href="/Stylesheets/MasterPage.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
@@ -19,12 +21,12 @@
             <header>
                  <div class="container-fluid">
                     <div class="row">
-                        <div class="col-xl-7">
-                            <img src="" alt="">
+                        <div class="col-xl-7 headerLogo">
+                            <img src="/Images/NaricesFriasLogo.png" alt="">
                         </div>
-                        <div class="col-xl-5">
+                        <div class="col-xl-5 navContainer">
                             <nav>
-                                <ul>
+                                <ul class="headerMenu">
                                     <li><a href="#">Catalogo</a></li>
                                     <li><a href="#">Que Somos?</a></li>
                                     <li><a href="#">Contactanos</a></li>
@@ -41,7 +43,40 @@
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
 
-            <h1>FOOTER</h1>
+            <footer>
+                <div class="container-fluid">
+                    <div class="row">
+            <div class="col-xl-5 logoFooter">
+                <img src="/Images/NaricesFriasLogoWhite.png" alt="">
+            </div>
+            <div class="col-xl-4 ">
+                <div class="footerCircle">
+
+                </div>
+            </div>
+
+            <div class="col-xl-3 footerNavCont">
+                <nav>
+                    <ul>
+                        <li><a href="#">Catalogo</a></li>
+                        <li><a href="#">Que Somos?</a></li>
+                        <li>
+                            <a name="" id="btnFooter" class="btn btn-primary " href="#" role="button">Contactanos</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="row footerCopy">
+                <h5>@Copyright 2023</h5>
+            </div>
+
+
+        </div>
+                </div>
+        
+
+
+    </footer>
         </div>
     </form>
 </body>
