--- a/Narices_Frias/Stylesheets/LogIn.css
+++ b/Narices_Frias/Stylesheets/LogIn.css
@@ -37,11 +37,11 @@ h1{
     display:grid;
     justify-content:center;
 }
-.containerButton button{
-    background-color:black;
-    border:0;
-    padding:0.5em 2.5em;
-    margin:2em 1em;
+.btnIngresar {
+    background-color: black;
+    border: 0;
+    padding: 0.5em 2.5em;
+    margin: 2em 1em;
 }
 .forgotPass{
     text-align:center;
