--- a/Narices_Frias/Stylesheets/StylesCrud.css
+++ b/Narices_Frias/Stylesheets/StylesCrud.css
@@ -19,16 +19,17 @@
 .form-group {
     margin: 0.5em 8em;
 }
-.btnRegister{
-    display:grid;
-    justify-content:center;
-    margin-top:2em;
+.btnCrudRegister {
+    display: grid;
+    justify-content: center;
+    margin-top: 2em;
+
 }
-.btn{
-    background-color:black;
-    padding:0.8em 5em;
-    border:0;
-    border-radius:10px;
+.btnCrudRegister {
+    background-color: black;
+    padding: 0.8em 5em;
+    border: 0;
+    border-radius: 10px;
 }
 .crudMenu {
     background-color:white;
@@ -53,3 +54,5 @@ li a img{
     display:flex;
     justify-content:center;
 }
+
+
