--- a/Narices_Frias/Stylesheets/StylesCrud.css
+++ b/Narices_Frias/Stylesheets/StylesCrud.css
@@ -27,6 +27,7 @@
 }
 .btnCrudRegister {
     background-color: black;
+    color:white;
     padding: 0.8em 5em;
     border: 0;
     border-radius: 10px;
