--- a/Narices_Frias/Page.Master
+++ b/Narices_Frias/Page.Master
@@ -30,6 +30,7 @@
                                     <li><a href="#">Catalogo</a></li>
                                     <li><a href="#">Que Somos?</a></li>
                                     <li><a href="#">Contactanos</a></li>
+                                    <li><a href="Pages/CharitableActivitiesCatalogue.aspx">Publicaciones</a></li>
                                 </ul>
                             </nav>
                         </div>
