--- a/Narices_Frias/Stylesheets/AnimalCards.css
+++ b/Narices_Frias/Stylesheets/AnimalCards.css
@@ -9,6 +9,7 @@
 .card {
     background-color: #FEDC00;
     border-radius:15px;
+    display:grid;
     padding: 2em 3em;
     margin: 1em;
 }
@@ -28,5 +29,11 @@
 }
 
 .reservarCita {
+    justify-self:center;
     text-align: center;
+    border-radius:15px;
+    color:white;
+    background-color:black;
+    width:250px;
+    padding:1em;
 }
