--- a/Narices_Frias/Page.Master
+++ b/Narices_Frias/Page.Master
@@ -31,30 +31,20 @@
                                     <li><a href="../Pages/CharitableActivitiesCatalogue.aspx">Publicaciones</a></li>
                                     <li><a href="../Pages/SignIn.aspx">Registrarse</a></li>
                                     <li><a href="../Default.aspx">Iniciar sesion</a></li>
-                                    <% if (Session["User"] != null) { %>
                                         <li runat="server"><a href="../pages/AdoptedDogs.aspx">Tus animales</a></li>
-                                         <li runat="server"><a href="../pages/UserFormDate.aspx">Agendacion de citas</a></li>
-                                     <% } %>
-                                    <% NFDao.Model.SystemUser user = (NFDao.Model.SystemUser)Session["User"]; %>
-                                    <% if ( user.role == 2 || user.role == 0) { %>
+                                         
+                                   
                                          <li runat="server"><a href="../pages/MenuCruds.aspx">Menu</a></li>
-                                        <li runat="server"><a href="../pages/BillView.aspx">Facturacion</a></li>
-                                     <% } %>
-                                    <% if (user.role == 0) { %>
-                                         <li runat="server"><a href="../pages/CrudAnimals/AnimalView.aspx">Animales del refugio</a></li>
-                                         <li runat="server"><a href="../pages/Crudusers/UserView.aspx">Usuarios</a></li>
-                                            <li runat="server"><a href="../pages/CrudCharitableActivities.aspx">Actividades Beneficas</a></li>
-                                            <li runat="server"><a href="../pages/Crudusers/CrudProducts.aspx">Productos</a></li>
-                                            <li runat="server"><a href="../pages/Crudusers/UserView.aspx">Usuarios</a></li>
-                                     <% } %>
-
-                                    
+                                         <%if (Session["User"] != null)
+                                             { %>
+                                            <li runat="server"><a href="../pages/MenuCruds.aspx">Menu</a></li>
+                                        <% } %>
                                 </ul>
                             </nav>
                         </div>
                     </div>
                 </div>
-                 
+                
 
             </header>
             
